[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-priority-pilot"
version = "1.0.0"
description = "OpenEnv environment for code review prioritization"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.5.0",
    "openai>=1.0.0",
    "huggingface_hub==0.20.3",
    "openenv-core>=0.2.0"
]

[project.scripts]
inference = "inference:main"
